fixed boris flickering on load

--- a/src/containers/node/BorisLayout/styles.scss
+++ b/src/containers/node/BorisLayout/styles.scss
@@ -33,7 +33,7 @@
   width: 100%;
   height: 100vh;
   overflow: hidden;
-  background: 50% 0% no-repeat/cover url('~/sprites/boris_bg.svg');
+  background: 50% 0% no-repeat/cover url("~/sprites/boris_bg.svg");
 }
 
 .header {
@@ -86,8 +86,14 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  padding-bottom: 33.333%;
+  position: relative;
+  width: 100%;
 
   img {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
   }
 
